syntax = "proto3";

option csharp_namespace = "SampleGrpcService";

package SampleGrpcService;

service ProductApi {
  rpc GetProductById (GetProductByIdRequest) returns (GetPrductByIdResponse);
  rpc GetProductListing (GetProductListingRequest) returns (stream Product);
  rpc BulkInsertProduct (stream Product) returns (BulkInsertProductResponse);
  rpc BulkUpdateProduct (stream Product) returns (stream Product);

}

message Product{
    int32 product_id = 1;
    string product_name = 2;
    double price= 3;
}

message GetProductByIdRequest {
    int32 product_id =1;
}

message GetPrductByIdResponse {
    Product product =1;
}

message GetProductListingRequest{
    
}

message GetProductListingResponse{
    repeated Product products =1;
}

message BulkInsertProductRequest {
    
}

message BulkInsertProductResponse {
    int32 total_records =1;
}
